--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         </section>
     </main>
 
-    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://apis.google.com/js/api.js" async defer onload="gapiLoaded()"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer onload="gisLoaded()"></script>
     <script src="script.js"></script>
 </body>
 </html>
